master - better look

--- a/popup.html
+++ b/popup.html
@@ -2,6 +2,22 @@
 <html>
   <head>
     <script type="text/javascript" src="popup.js"></script>
+    <style>
+      li {
+        list-style-type: none;
+      }
+      ol {
+        margin: 0px 0;
+        padding: 0;
+        list-style: decimal inside none;
+      }
+      ol li {
+        margin: 0px;
+        padding: 0px;
+        text-indent: -20px;
+        margin-left: 20px;
+      }
+    </style>
   </head>
   <body>
     Request Headers:
