master - added credits

--- a/popup.html
+++ b/popup.html
@@ -17,6 +17,7 @@
         text-indent: -20px;
         margin-left: 20px;
       }
+      a {font-size: 10px}
     </style>
   </head>
   <body>
@@ -31,6 +32,9 @@
       <ol id="response_headers">
       </ol>
     </div>
+
+    <br />
+    <a href="credits.html">CREDITS</a>
   </body>
 </html>
 
