master fix for multiple tabs

--- a/popup.html
+++ b/popup.html
@@ -21,15 +21,15 @@
     </style>
   </head>
   <body>
-    Request Headers:
+    <i>Request Headers:</i>
     <div>
-      <ol id="request_headers">
+      <ol id="requestInfo">
       </ol>
     </div>
     <br />
-    Response Headers:
+    <i>Response Headers:</i>
     <div>
-      <ol id="response_headers">
+      <ol id="responseInfo">
       </ol>
     </div>
 
